# jkldepartures

./: .gitignore  ADR-001_ jkldepartures.md  ADR-002 API Contract and Data Integration Strategy.md  ADR-002_ Shared API Contract.md  ADR-003_ Frontend Architecture and Data Consumption Strategy (WIP).md  ADR-003_React.md  ADR-004_ Backend GTFS and GTFS-Realtime Integration Strategy.md  ADR-005_ Threading and Concurrency Strategy.md  ADR-006_Vite.md  ADR-007_Tailwind.md  ADR-008_Leaflet.md  ADR-009_Polling-interval.md  ADR-010_Data-Freshness_Error-Handling.md  ADR-011_Frontend-Testing-strategy.md  ADR-011_Testing-strategy.md  Backend Responsibilities.mmd  Data Flow.mmd  High-Level System Diagaram.mmd  README.md  jyvaskyla_transit_mockup.html
backend/: Cargo.toml
backend/src/: main.rs  tests.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: departures.ts  gtfs.ts  types.ts
frontend/src/components/AlertBanner/: index.tsx
frontend/src/components/DepartureBoard/: index.tsx
frontend/src/components/FreshnessIndicator/: index.tsx
frontend/src/components/StopSearch/: index.tsx
frontend/src/hooks/: useAlerts.ts  useDepartures.ts  useStops.ts  useVehiclePositions.ts  useVehicles.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: AlertsPage.tsx  HomePage.tsx  MapPage.tsx  StopPage.tsx  StopSearchPage.tsx
frontend/src/services/: alerts.ts  departures.ts  stops.ts  vehicles.ts
