[package]
name = "jkldepartures"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = {version = "0.13.2", features= ["blocking"] }
rouille = "3.6.2"
gtfs-realtime = "0.2"
prost = "0.14.1"
prost-derive = "0.14.1"
serde = "1.0"
serde_json = "1.0"
prost-build = "0.14.1"
arc-swap = "1.7"
envconfig = "0.11.1"
bytes = "1.11.1"